--- a/docs/tb-videogular-demo/src/app/app.component.html
+++ b/docs/tb-videogular-demo/src/app/app.component.html
@@ -7,7 +7,7 @@
 
   <a
     class="hero-button hero-button__dark"
-    href="https://videogular.github.io/tb-videogular/docs"
+    href="https://testbook.github.io/tb-videogular/docs"
     target="_blank">
 
     Get Started
